# create-video-effect

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: publish.yml
src/: cli.rs  error.rs  generator.rs  main.rs  naming.rs  tui.rs  workspace.rs
src/commands/: effect.rs  mod.rs  transition.rs
templates/effect/multi-pass/: Cargo.toml.tera  README.md.tera  build.rs.tera
templates/effect/multi-pass/benches/: effect_cpu.rs.tera
templates/effect/multi-pass/shaders/: composite.slang.tera  composite.vekl.tera  edge_detect.slang.tera  edge_detect.vekl.tera
templates/effect/multi-pass/src/: gpu.rs.tera  kernel.rs.tera  lib.rs.tera  params.rs.tera
templates/effect/multi-pass/tests/: render_basic.rs.tera
templates/effect/single-pass/: Cargo.toml.tera  README.md.tera  build.rs.tera  rustfmt.toml
templates/effect/single-pass/benches/: effect_cpu.rs.tera
templates/effect/single-pass/shaders/: effect.slang.tera  effect.vekl.tera
templates/effect/single-pass/src/: gpu.rs.tera  kernel.rs.tera  lib.rs.tera  params.rs.tera
templates/effect/single-pass/tests/: .gitignore  render_basic.rs.tera
